--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,168 +1,182 @@
-html{
-    box-sizing: border-box;
+html {
+  box-sizing: border-box;
 }
-*, *::before, *::after{
-    box-sizing: inherit;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
-body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+* {
+  margin:0;
+  padding:0;
 }
-img{
-    max-width: 100%;
+body {
+  font-family: verdana, geneva, serif;
 }
-p{
-    font-size: 16px;
-    line-height: 2;
-}
-.boton{
-    background-color: #00b8e4;
-    padding: 10px 60px;
-    display: inline-block;
-    margin-top: 10px;
-    color: #ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 18px;
-    transition: background-color .3s ease-in-out ;
-}
-.boton:hover{
-    background-color: rgb(0,131,164);
-}
-.site-header{
-    padding: 20px 0 20px 0; /*dar espacios como en el reloj*/
 
+
+header {
+  padding: 20px 0;
 }
-.contenedor{
-    max-width: 1200px;/*Tamaño*/
-    margin: 0 auto; /*Centrar*/
-    /*overflow: auto; Limpiar floats*/
+
+div.contenedor,
+div.contenido {
+  width: 1200px;
+  margin: 0 auto;
 }
-/**limpair floats en lugar de overflow**/
-.clearfix::after{
-    content:'';
-    clear: both;
-    display: block;
+
+/** Navegacion **/
+.navegacion{
+  background-color: #db008d;
 }
-/**Navegación**/
-.barra{
-    background-color: #db008d;
-    margin-top: 40px;
+nav {
+  width: 1200px;
+  margin:0 auto;
+  position: relative;
 }
-.navegacion-principal a{
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 20px;
-    display: block;
-    text-align: center;
-    padding: 20px;
+nav ul {
+  list-style: none;
 }
-@media (min-width: 768px){
-    .navegacion-principal a{
-        display: inline-block;
-    }
+nav > ul > li {
+  float: left;
 }
-.navegacion-principal a:hover{
-    background-color: #00b8e4;
+nav ul::after {
+  content: '';
+  display: block;
+  clear: both;
 }
-/**Contenedor principal**/
-.contenido-principal{
-    margin-top: 40px;
+nav ul li a {
+  display: inline-block;
+  color: #ffffff;
+  padding: 20px 20px;
+  text-decoration: none;
+  width: 200px;
+  text-align: center;
 }
-.contenido-principal,.sidebar{
-    padding: 20px;
+
+
+nav ul li a:hover {
+  background-color: #00b8e4;
 }
-@media (min-width: 768px){
-    .contenido-principal{
-        width: 70%;
-        float: left;
-        padding-right: 0 60px 0 0 ;
-    }
-    .sidebar{
-        width: 30%;
-        float: right;
-        padding: 0;
-        margin-top: 40px;
-    }
-    
+
+/* SEgundo nivel **/
+
+nav ul ul {
+  position: absolute;
+  top:100%;
+  background-color: rgba(0,184,228, .7);
+  display: none;
 }
-/**Entradas de blog**/
-h2{
+nav ul li:hover > ul {
+  display: block;
+}
+nav ul li:hover {
+  background-color: rgba(0,184,228, .7);
+}
+
+/** Contenido Principal**/
+div.contenido::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+main {
+  width: 70%;
+  float: left;
+  padding-right: 40px;
+}
+aside {
+  float: right;
+  width: 30%;
+}
+/* entradas **/
+article {
+    margin-top: 30px;
+}
+h2 {
     color: #00b8e4;
     margin-bottom: 20px;
 }
-.entrada { 
-    margin-bottom: 60px;
+article::after {
+  content: '';
+  display: block;
+  clear: both;
 }
-.entrada:last-of-type{
-    margin-bottom: 0;
+article img {
+    float: left;
+    width: 300px;
+    margin-right: 30px;
 }
-.entrada img{
-    display: block;
-}
-@media (min-width: 768px){
-    .entrada img{
-        width: 300px;
- 
-        float: left;
-        margin: 0 30px 0 0;
-    }
-}
-.entrada p{
+article p {
+    line-height: 2;
     text-align: justify;
 }
-/**Sidebar**/
-.sidebar ul{
-    list-style: none;
-    padding: 0;
-}
-.sidebar ul li{
-    padding: 10px 10px 10px 0;
-}
-.sidebar ul li:hover{
+.boton {
     background-color: #00b8e4;
-}
-.sidebar ul li a{   
-    color: #00b8e4;
-    font-size: 18px;
-    text-decoration: none;
-}
-.sidebar ul li:hover a{
-    color: #ffffff;
-}
-.footer-sitio{
-    background-color: #db008d;
-    padding-top: 40px;
-    margin-top: 30px;
-    color: #ffffff;
+    padding: 10px 30px;
     text-align: center;
-}
-.footer-sitio h2 {
-    color: #ffffff;
-}
-.footer-sitio a{
+    display: inline-block;
     color: #ffffff;
     text-decoration: none;
-    margin-right: 20px;
+    text-transform: uppercase;
+    margin-top: 10px;
 }
-.footer-sitio a:last-of-type{
-    margin-right: 0;
+
+/** Aside **/
+aside {
+  margin-top: 30px;
 }
-@media (min-width: 768px){
-    .footer-sitio .nosotros{
-        text-align: left;
-        float: left;
-        width: 30%;
-    }
-    .footer-sitio .menu{
-        float: right;
-        width: 50%;
-        text-align: right;
-    }
+aside ul {
+  list-style: none;
 }
-.copyright{
-    background-color: #b10474;
-    margin-top: 50px;
-    margin-bottom: 0;
+aside ul li {
+    padding: 10px 0 10px 10px;
+
+}
+aside ul li:hover {
+  background-color: #00b8e4;
+
+}
+aside ul li a {
+    color: #00b8e4;
+    padding: 10px 0;
+    text-decoration: none;
+}
+aside ul li:hover a {
+  color: #ffffff;
+}
+/** Footer **/
+footer {
+  background-color: #db008d;
+  padding-top: 40px;
+  margin-top:30px;
+}
+
+footer h2 {
+    color: white;
+}
+footer .contenedor::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+footer .nosotros {
+  float: left;
+  width: 30%;
+  color: white;
+}
+footer .menu {
+    float: right;
+    width: 40%;
+    text-align: right;
+}
+footer nav {
+  width: auto;
+}
+footer nav a {
+  color: white;
+  text-decoration: none;
+}
+p.copyright {
     padding: 20px 0;
+    text-align: center;
+    color: white;
 }
